--- a/src/main/webapp/i18n/en/application.json
+++ b/src/main/webapp/i18n/en/application.json
@@ -3,13 +3,17 @@
 		"page.title": "My applications",
 		"title": "My applications",
 		"list": {
-			"title.premiere": {
-				"created.sejour_etudiant": "First application of student residency - created on {{creationDate}}",
-				"validated.sejour_etudiant": "First application of student residency - validated on {{decisionDate}}"
-			},
-			"title.renouvellement": {
-				"created.sejour_etudiant": "Student residency renewal application - created on {{creationDate}}",
-				"validated.sejour_etudiant": "Student residency renewal application - validated on {{decisionDate}}"
+			"title": {
+				"created": {
+					"premiere.sejour_etudiant": "First application of student residency - created on {{creationDate}}",
+					"renouvellement.sejour_etudiant": "Student residency renewal application - created on {{creationDate}}",
+					"naturalisation.naturalisation": "Application for naturalization by decree - created on {{creationDate}}"
+				},
+				"validated": {
+					"premiere.sejour_etudiant": "First application of student residency - validated on {{decisionDate}}",
+					"renouvellement.sejour_etudiant": "Student residency renewal application - validated on {{decisionDate}}",
+					"naturalisation.naturalisation": "Application for naturalization by decree - validated on {{decisionDate}}"
+				}
 			},
 			"noApplication": "You don't have application",
 			"detail": "Detail",
