--- a/src/main/webapp/i18n/en/applicationType.json
+++ b/src/main/webapp/i18n/en/applicationType.json
@@ -3,7 +3,8 @@
         "ApplicationType" : {
             "premiere": "First application",
             "reexamen": "Reexamen",
-            "renouvellement": "Renewal"
+            "renouvellement": "Renewal",
+            "naturalisation": "Naturalization"
         }
     }
 }
