--- a/src/main/webapp/i18n/fr/applicationType.json
+++ b/src/main/webapp/i18n/fr/applicationType.json
@@ -3,7 +3,8 @@
         "ApplicationType" : {
             "premiere": "Primo-demande",
             "reexamen": "Réexamen",
-            "renouvellement": "Renouvellement"
+            "renouvellement": "Renouvellement",
+            "naturalisation": "Naturalisation"
         }
     }
 }
