--- a/src/main/webapp/i18n/fr/renouveler.json
+++ b/src/main/webapp/i18n/fr/renouveler.json
@@ -29,13 +29,24 @@
         	"step.short": "Paiement",
         	"step.long": "Pré-payez vos taxes de séjour"
         },
-        "preparationText": "<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p><ul><li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li><li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant),</li><li>en cas de changement d'état-civil, d'un passeport valide et d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li><li>en cas de changement d'adresse, d'un justificatif de domicile,</li></ul><p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p><p><a href='#'>Trouver un interprète traducteur agréé</a></p>",
-        "button": {
-        	"start": "Démarrer",
-        	"continue": "Continuer",
-        	"back": "Retour",
-        	"payment": "Valider le paiement",
-        	"end": "Terminer"
-        }
-    }
+        "preparationText": "<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p><ul><li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li><li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant),</li><li>en cas de changement d'état-civil, d'un passeport valide et d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li><li>en cas de changement d'adresse, d'un justificatif de domicile,</li></ul><p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p><p><a href='#'>Trouver un interprète traducteur agréé</a></p>"
+    },
+    "summary": {
+    	"form": {
+			"subtitle": "Vous êtes sur le point de déposer une demande de renouvellement de séjour étudiant. Avant de procéder au paiement, assurez-vous que les informations ci-dessous soient correctes.",
+	    	"identity": "Mes informations personnelles",
+	    	"address": "Mes coordonnées",
+	    	"project": "Mon projet"
+	    }
+    },
+    "payment" : {
+		"form": {
+			"informations": "<p>Vos taxes de séjour s'élèvent à 49,00 euros. Elles ne seront débitées qu'en cas d'issue favorable à votre demande.</p>"
+		}
+	},
+	"final" : {
+		"form": {
+    		"informations": "<p>La recevabilité de votre dossier va être vérifiée par l'Administration des étrangers en France.<br>Si votre dossier n'est pas recevable, nous vous indiquerons les raisons et vous préciserons le(s) élément(s) manquant(s) le cas échéant.</p><p>Si votre dossier est recevable, votre dossier sera instruit et vous recevrez une notification de la décision.<br>Si la décision est favorable et après débit des taxes de séjour, vous serez invité(e) à venir récupérer votre titre de séjour lorsqu'il sera disponible. <br>Si la décision est défavorable, vous serez informé(e) sur les voies de recours dont vous disposez.</p>"
+		}
+	}
 }
