--- a/src/main/webapp/i18n/en/renouveler.json
+++ b/src/main/webapp/i18n/en/renouveler.json
@@ -29,13 +29,24 @@
         	"step.short": "Payment",
         	"step.long": "Pre-pay your residency taxes"
         },
-        "preparationText": "<p>To complete your application, you must be in possession :</p><ul><li>a certificate of registration or pre-enrollment in a French school,</li><li>proof of sufficient financial resources, or greater than or equal to 615 € monthly (grant certificate, bank statement, pay stubs or proof of support by a guarantor),</li><li>in case of change of civil status , a valid passport and an extract of your birth certificate with filiation or a full copy of your birth certificate,</li><li>in case of change of address, proof of address,</li></ul><p>All supporting documents must be accompanied, where appropriate, a translation into French by a certified translator interpreter near an appellate court.</p><p><a href='#'>Find a certified translator interpreter</a></p>",
-        "button": {
-        	"start": "Start",
-        	"continue": "Continue",
-        	"back": "Back",
-        	"payment": "Confirm payment",
-        	"end": "End"
-        }
-    }
+        "preparationText": "<p>To complete your application, you must be in possession :</p><ul><li>a certificate of registration or pre-enrollment in a French school,</li><li>proof of sufficient financial resources, or greater than or equal to 615 € monthly (grant certificate, bank statement, pay stubs or proof of support by a guarantor),</li><li>in case of change of civil status , a valid passport and an extract of your birth certificate with filiation or a full copy of your birth certificate,</li><li>in case of change of address, proof of address,</li></ul><p>All supporting documents must be accompanied, where appropriate, a translation into French by a certified translator interpreter near an appellate court.</p><p><a href='#'>Find a certified translator interpreter</a></p>"
+    },
+    "summary": {
+    	"form": {
+	    	"subtitle": "You are about to make a student residency renewal application. Before paying, make sure that the information below are correct.",
+	    	"identity": "My personal information",
+	    	"address": "My address",
+	    	"project": "My project"
+    	}
+    },
+    "payment" : {
+		"form": {
+			"informations": "<p>Your residency taxes amount to 49.00 euros. They will not be debited in case of a favorable decision.</p>"
+		}
+	},
+	"final" : {
+		"form": {
+    		"informations": "<p>The admissibility of your application will be verified by the Administration of foreigners in France.<br>If your application is not admissible, we will tell you and you will specify the reason(s) element(s) missing(s) the if any.</p><p>If your application is admissible, your case will be heard and you will be notified of the decision.<br>If the decision is favorable and after flow of tourist taxes, you will be prompted to come pick up your residence permit when available.<br>If the decision is unfavorable, you will be informed of the remedies you have.</p>"
+		}
+	}
 }
