--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -14,7 +14,20 @@
             "resourceProof.tooltip": "Merci de joindre des justificatifs de ressources financières supérieures ou égales à 615 € mensuels (attestation bancaire, fiches de paie, attestation de bourse)",
             "inscriptionCertificate": "Certificat d'inscription",
             "inscriptionCertificate.placeholder": "Cliquer ou déposer votre certificat ici...",
-            "inscriptionCertificate.tooltip": "Merci de joindre un justificatif d'inscription ou de pré-inscription auprès d'un établissement d'enseignement"
+            "inscriptionCertificate.tooltip": "Merci de joindre un justificatif d'inscription ou de pré-inscription auprès d'un établissement d'enseignement",
+            
+            "resources": {
+            	"title": "Ressources",
+            	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes justificatifs de ressources directement auprès de l'URSSAF. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
+            	"no": "Non, je souhaite justifier par moi même de mes ressources. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
+            	"no.tooltip" : "Le cas échéant, joindre : contrat de travail, attestation d'emplois antérieurs, attestation pôle emploi, 3 derniers bulletins de salaire, bulletins de salaire de novembre et décembre des 3 dernières années."
+            },
+            "taxSituation": {
+            	"title": "Situation fiscale",
+            	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes justificatifs fiscaux directement auprès des Finances Publiques. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
+            	"no": "Non, je souhaite justifier de ma situation fiscale sans autoriser l'échange de mes informations avec le Ministère des Finances. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
+            	"no.tooltip": "Le cas échéant, joindre : bordereau de situation fiscale P237 récent portant sur l'imposition des 3 dernières années et avis d'imposition des 3 derniers exercices."
+            }
 		}
 	}
 }
