suppression reliquat etudier

--- a/src/main/webapp/i18n/en/etudier.json
+++ b/src/main/webapp/i18n/en/etudier.json
@@ -1,5 +1,5 @@
 {
-    "etudier": {
+    "procedure": {
         "title": "First application for a student stay",
         "page.title": "First application for a student stay",
         "step.title": "5 steps for your application",
