--- a/src/main/webapp/i18n/en/naturalisation.json
+++ b/src/main/webapp/i18n/en/naturalisation.json
@@ -1,5 +1,5 @@
 {
-    "etudier": {
+    "procedure": {
         "title": "Application for naturalization by decree",
         "page.title": "Application for naturalization by decree",
         "step.title": "5 steps for your application",
