--- a/src/main/webapp/i18n/fr/etudier.json
+++ b/src/main/webapp/i18n/fr/etudier.json
@@ -1,5 +1,5 @@
 {
-    "etudier": {
+    "procedure": {
         "title": "Première demande de séjour étudiant",
         "page.title": "Première demande de séjour étudiant",
         "step.title": "5 étapes pour déposer votre demande",
