--- a/src/main/webapp/i18n/fr/naturalisation.json
+++ b/src/main/webapp/i18n/fr/naturalisation.json
@@ -1,5 +1,5 @@
 {
-    "etudier": {
+    "procedure": {
         "title": "Demande de naturalisation par décret",
         "page.title": "Demande de naturalisation par décret",
         "step.title": "5 étapes pour déposer votre demande",
