--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -6,8 +6,8 @@
 			"training": "Formation",
 			"trainingStart": "Date de début de la formation",
 			"trainingLength": "Durée de la formation (mois)",
-			"resourceType": "Type de resource",
-			"resourceAmount": "Montant des resources (euros)",
+			"resourceType": "Type de ressource",
+			"resourceAmount": "Montant des ressources (euros)",
             "document.title": "Joignez vos pièces justificatives",
             "resourceProof": "Preuve(s) de ressources",
             "resourceProof.placeholder": "Cliquer ou déposer vos preuves ici...",
