--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -21,13 +21,28 @@
             	"title": "Resources",
             	"yes": "Yes, I authorize the administration of foreigners in France to get my supporting resource directly from URSSAF. I have then no supporting piece to attach to my request.",
             	"no": "No, I want to justify myself by my resources. Then I have to join my request supporting documents requested of me.",
-            	"no.tooltip" : "If applicable, attach: employment contract, certificate of past employment, employment certificate pole, last 3 payslips, payslips November and December the last three years."
+            	"no.tooltip" : "If applicable, attach: employment contract, certificate of past employment, employment certificate pole, the last 3 payslips, November and December payslips of the last three years.",
+            	"contract": "Employment contract",
+            	"contract.placeholder": "Click or drag your contract here...",
+            	"contract.tooltip": "...",
+            	"certificate": "Employment certificate",
+            	"certificate.placeholder": "Click or drag your certificate here...",
+            	"certificate.tooltip": "...",
+            	"paySlip": "Pay slip",
+            	"paySlip.placeholder": "Click or drag your slip here...",
+            	"paySlip.tooltip": "..."
             },
             "taxSituation": {
             	"title": "Tax situation",
             	"yes": "Yes, I authorize the administration of foreigners in France to recover my tax receipts directly from the Public Finance. I have then no supporting piece to attach to my request.",
             	"no": "No, I want to justify my tax situation without allowing sharing my information with the Ministry of Finance. Then I have to join my request supporting documents requested of me.",
-            	"no.tooltip": "If applicable, attach: slip P237 recent tax position on the imposition of the past three years and tax notice last 3 years."
+            	"no.tooltip": "If applicable, attach: recent P237 tax situation slip on the imposition of the past three years and tax notice last 3 years.",
+            	"taxSlip": "Tax situation slip",
+            	"taxSlip.placeholder": "Click or drag your slip here...",
+            	"taxSlip.tooltip": "...",
+            	"taxNotice": "Tax notice",
+            	"taxNotice.placeholder": "Click or drag your notice here...",
+            	"taxNotice.tooltip": "..."
             }
 		}
 	}
