--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -20,13 +20,28 @@
             	"title": "Ressources",
             	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes justificatifs de ressources directement auprès de l'URSSAF. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
             	"no": "Non, je souhaite justifier par moi même de mes ressources. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
-            	"no.tooltip" : "Le cas échéant, joindre : contrat de travail, attestation d'emplois antérieurs, attestation pôle emploi, 3 derniers bulletins de salaire, bulletins de salaire de novembre et décembre des 3 dernières années."
+            	"no.tooltip": "Le cas échéant, joindre : contrat de travail, attestations d'emplois antérieurs, attestation pôle emploi, 3 derniers bulletins de salaire, bulletins de salaire de novembre et décembre des 3 dernières années.",
+            	"contract": "Contrat de travail",
+            	"contract.placeholder": "Cliquer ou déposer votre contrat ici...",
+            	"contract.tooltip": "...",
+            	"certificate": "Attestations d'emplois antérieurs",
+            	"certificate.placeholder": "Cliquer ou déposer votre attestation ici...",
+            	"certificate.tooltip": "...",
+            	"paySlip": "Bulletins de salaire",
+            	"paySlip.placeholder": "Cliquer ou déposer votre bulletins ici...",
+            	"paySlip.tooltip": "..."
             },
             "taxSituation": {
             	"title": "Situation fiscale",
             	"yes": "Oui, j'autorise l'administration des étrangers en France à récupérer mes justificatifs fiscaux directement auprès des Finances Publiques. Je n'ai alors pas de pièce justificatives à joindre à ma demande.",
             	"no": "Non, je souhaite justifier de ma situation fiscale sans autoriser l'échange de mes informations avec le Ministère des Finances. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
-            	"no.tooltip": "Le cas échéant, joindre : bordereau de situation fiscale P237 récent portant sur l'imposition des 3 dernières années et avis d'imposition des 3 derniers exercices."
+            	"no.tooltip": "Le cas échéant, joindre : bordereau de situation fiscale P237 récent portant sur l'imposition des 3 dernières années et avis d'imposition des 3 derniers exercices.",
+            	"taxSlip": "Bordereau de situation fiscale",
+            	"taxSlip.placeholder": "Cliquer ou déposer votre bordereau ici...",
+            	"taxSlip.tooltip": "...",
+            	"taxNotice": "Avis d'imposition",
+            	"taxNotice.placeholder": "Cliquer ou déposer votre avis ici...",
+            	"taxNotice.tooltip": "..."
             }
 		}
 	}
