modif file upload sur project-naturalization

--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -23,12 +23,12 @@
             	"yes.done": "Data exchange with URSSAF authorized",
             	"no": "No, I want to justify myself by my resources. Then I have to join my request supporting documents requested of me.",
             	"no.tooltip" : "If applicable, attach: employment contract, certificate of past employment, employment certificate pole, the last 3 payslips, November and December payslips of the last three years.",
-            	"contract": "Employment contract",
-            	"contract.placeholder": "Click or drag your contract here...",
-            	"contract.tooltip": "...",
-            	"certificate": "Employment certificate",
-            	"certificate.placeholder": "Click or drag your certificate here...",
-            	"certificate.tooltip": "...",
+            	"workContract": "Employment contract",
+            	"workContract.placeholder": "Click or drag your contract here...",
+            	"workContract.tooltip": "...",
+            	"workCertificate": "Employment certificate",
+            	"workCertificate.placeholder": "Click or drag your certificate here...",
+            	"workCertificate.tooltip": "...",
             	"paySlip": "Pay slip",
             	"paySlip.placeholder": "Click or drag your slip here...",
             	"paySlip.tooltip": "..."
