--- a/src/main/webapp/i18n/fr/project.json
+++ b/src/main/webapp/i18n/fr/project.json
@@ -22,12 +22,12 @@
             	"yes.done": "Echange de données autorisée avec l'URSSAF",
             	"no": "Non, je souhaite justifier par moi même de mes ressources. Je dois alors joindre à ma demande les pièces justificatives qui me sont demandées.",
             	"no.tooltip": "Le cas échéant, joindre : contrat de travail, attestations d'emplois antérieurs, attestation pôle emploi, 3 derniers bulletins de salaire, bulletins de salaire de novembre et décembre des 3 dernières années.",
-            	"contract": "Contrat de travail",
-            	"contract.placeholder": "Cliquer ou déposer votre contrat ici...",
-            	"contract.tooltip": "...",
-            	"certificate": "Attestations d'emplois antérieurs",
-            	"certificate.placeholder": "Cliquer ou déposer votre attestation ici...",
-            	"certificate.tooltip": "...",
+            	"workContract": "Contrat de travail",
+            	"workContract.placeholder": "Cliquer ou déposer votre contrat ici...",
+            	"workContract.tooltip": "...",
+            	"workCertificate": "Attestations d'emplois antérieurs",
+            	"workCertificate.placeholder": "Cliquer ou déposer votre attestation ici...",
+            	"workCertificate.tooltip": "...",
             	"paySlip": "Bulletins de salaire",
             	"paySlip.placeholder": "Cliquer ou déposer votre bulletins ici...",
             	"paySlip.tooltip": "..."
