Creation identity family + directive for input birth date and country

--- a/src/main/webapp/i18n/en/identity.json
+++ b/src/main/webapp/i18n/en/identity.json
@@ -17,7 +17,9 @@
             "passport.tooltip": "Thank you to join the pages relating to the civil status, validity dates, the entry stamps and visas",
             "birthAct": "Id document(s)",
             "birthAct.placeholder": "Click or drag your id documents here...",
-            "birthAct.tooltip": "Thank you to attach an excerpt from your birth certificate with filiation or a full copy of your birth certificate"
+            "birthAct.tooltip": "Thank you to attach an excerpt from your birth certificate with filiation or a full copy of your birth certificate",
+            "father": "Father",
+            "mother": "Mother"
 		}
 	}
 }
