gestion des parents (identity + address) dans etat civil

--- a/src/main/webapp/i18n/en/documentType.json
+++ b/src/main/webapp/i18n/en/documentType.json
@@ -3,6 +3,7 @@
         "DocumentType" : {
             "passport": "Passport",
             "birthAct": "Birth act",
+            "civilStatusAct": "Id act",
             "inscriptionCertificate": "Inscription certificate",
             "resourceProof": "Resource proof"
         }
