--- a/src/main/webapp/i18n/fr/documentType.json
+++ b/src/main/webapp/i18n/fr/documentType.json
@@ -3,6 +3,7 @@
         "DocumentType" : {
             "passport": "Passeport",
             "birthAct": "Acte de naissance",
+            "civilStatusAct": "Acte d'état-civil",
             "inscriptionCertificate": "Certificat d'inscription",
             "resourceProof": "Preuve(s) de ressource"
         }
