--- a/src/main/webapp/i18n/en/applicationNature.json
+++ b/src/main/webapp/i18n/en/applicationNature.json
@@ -4,7 +4,7 @@
             "sejour_etudiant": "Student residency",
             "sejour_salarie": "Salary residency",
             "sejour_competences_talents": "Talent residency",
-            "naturalisation": "Naturalization"
+            "naturalisation": ""
         }
     }
 }
