--- a/src/main/webapp/i18n/fr/applicationNature.json
+++ b/src/main/webapp/i18n/fr/applicationNature.json
@@ -4,7 +4,7 @@
             "sejour_etudiant": "Séjour étudiant",
             "sejour_salarie": "Séjour salarie",
             "sejour_competences_talents": "Séjour competences talents",
-            "naturalisation": "Naturalisation"
+            "naturalisation": ""
         }
     }
 }
