--- a/src/main/webapp/i18n/en/agent.json
+++ b/src/main/webapp/i18n/en/agent.json
@@ -1,6 +1,7 @@
 {
     "agent": {
         "title.premiere.sejour_etudiant": "{{studentName}} - First application for a student stay",
-        "title.renouvellement.sejour_etudiant": "{{studentName}} - Renewal for a student stay"
+        "title.renouvellement.sejour_etudiant": "{{studentName}} - Renewal for a student stay",
+        "title.naturalisation.naturalisation": "{{studentName}} - Application for naturalization by decree"
     }
 }
