--- a/src/main/webapp/i18n/en/etudier.json
+++ b/src/main/webapp/i18n/en/etudier.json
@@ -42,5 +42,8 @@
 		"form": {
     		"informations": "<p>The admissibility of your application will be verified by the Administration of foreigners in France.<br>If your application is admissible, you will receive a confirmation notice telling you to complete the submission of your application.<br>If your application is inadmissible, we will tell you and you will specify the reason(s) element(s) missing(s) where applicable.</p><p>During the meeting at the Embassy of France in Seoul the authenticity of your passport and your vital documents will be checked, and your biometric data recorded.</p><p>After the appointment, your case will be heard and you will be notified of the decision.<br>If the decision is favorable and after flow of tourist taxes, you will be prompted to come pick up your residence permit when available.<br>If the decision is unfavorable, you will informed of the remedies you have.</p>"
 		}
+	},
+	"rdv": {
+		"text": "Please bring your passport and your original civil status documents at your appointment."
 	}
 }
