--- a/src/main/webapp/i18n/en/naturalisation.json
+++ b/src/main/webapp/i18n/en/naturalisation.json
@@ -43,5 +43,10 @@
 		"form": {
     		"informations": "<p>The admissibility of your application will be verified by the Administration of foreigners in France.<br>If your application is admissible, you will receive a confirmation notice telling you to make an appointment for an interview assimilation.<br>If your application is inadmissible, we will tell you and you will specify the reason(s) element(s) missing(s) where applicable.</p><p>After the appointment, your case will be heard and you will be notified of the decision.<br>If the decision is favorable, you will be prompted to a welcoming ceremony in the French nationality in which you will be given the naturalization decree.<br>If the decision is unfavorable, you will informed of the remedies you have.</p>"
 		}
+	},
+	"rdv": {
+		"form": {
+			"text": "Please bring original civil status documents at your appointment."
+		}
 	}
 }
