--- a/src/main/webapp/i18n/fr/naturalisation.json
+++ b/src/main/webapp/i18n/fr/naturalisation.json
@@ -43,5 +43,10 @@
 		"form": {
     		"informations": "<p>La recevabilité de votre dossier va être vérifiée par l'Administration des étrangers en France.<br>Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant à prendre rendez-vous pour un entretien d'assimilation.<br>Si votre dossier n'est pas recevable, nous vous indiquerons les raisons et vous préciserons le(s) élément(s) manquant(s) le cas échéant.</p><p>A l'issue du rendez-vous, votre dossier sera instruit et vous recevrez une notification de la décision.<br>Si la décision est favorable, vous serez invité(e) à une cérémonie d'accueil dans la nationalité française à l'occasion de laquelle vous sera remis le décret de naturalisation. <br>Si la décision est défavorable, vous serez informé(e) sur les voies de recours dont vous disposez.</p>"
 		}
+	},
+	"rdv": {
+		"form": {
+			"text": "Merci de vous munir des documents d'état-civil originaux lors de votre rendez-vous."
+		}
 	}
 }
