creation page interview + modif page documents

--- a/src/main/webapp/i18n/en/etudier.json
+++ b/src/main/webapp/i18n/en/etudier.json
@@ -44,6 +44,8 @@
 		}
 	},
 	"rdv": {
-		"text": "Please bring your passport and your original civil status documents at your appointment."
+		"form": {
+			"text": "Please bring your passport and your original civil status documents at your appointment."
+		}
 	}
 }
