--- a/src/main/webapp/i18n/fr/etudier.json
+++ b/src/main/webapp/i18n/fr/etudier.json
@@ -44,6 +44,8 @@
 		}
 	},
 	"rdv": {
-		"text": "Merci de vous munir de votre passeport et de vos documents d'état-civil originaux lors de votre rendez-vous."
+		"form": {
+			"text": "Merci de vous munir de votre passeport et de vos documents d'état-civil originaux lors de votre rendez-vous."
+		}
 	}
 }
