maj page validation avec naturalisation

--- a/src/main/webapp/i18n/en/etudier.json
+++ b/src/main/webapp/i18n/en/etudier.json
@@ -47,5 +47,14 @@
 		"form": {
 			"text": "Please bring your passport and your original civil status documents at your appointment."
 		}
+	},
+	"validation": {
+		"form": {
+			"project": "Project",
+			"button": {
+	    		"accept": "Accept residence permit",
+	    		"decline": "Decline residence permit"
+	    	}
+	    }
 	}
 }
