--- a/src/main/webapp/i18n/fr/etudier.json
+++ b/src/main/webapp/i18n/fr/etudier.json
@@ -47,5 +47,14 @@
 		"form": {
 			"text": "Merci de vous munir de votre passeport et de vos documents d'état-civil originaux lors de votre rendez-vous."
 		}
+	},
+	"validation": {
+		"project": "Projet de séjour",
+		"form": {
+			"button": {
+	    		"accept": "Accorder le droit au séjour",
+		    	"decline": "Refuser le droit au séjour"
+	    	}
+	    }
 	}
 }
