creation page reconstitution etat civil

--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -32,6 +32,7 @@
 		        "verify": "Application recevability",
 		        "rdv.preview": "Appointments",
 		        "decision": "Instruction and decision",
+		        "reconstruction": "Civil state reconstruction",
 		        "usager": "Users management",
 		        "application": "Application management",
 		        "rdv.setting": "Appointments calendar",
