--- a/src/main/webapp/i18n/fr/main.json
+++ b/src/main/webapp/i18n/fr/main.json
@@ -32,6 +32,7 @@
 		        "verify": "Récevabilité des demandes",
 		        "rdv.drive": "Rendez-vous",
 		        "decision": "Instruction et décision",
+		        "reconstruction": "Reconstitution de l'état-civil",
 		        "usager": "Gestion des usagers",
 		        "application": "Gestion des demandes",
 		        "rdv.setting": "Calendrier des rendez-vous",
